--- a/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
+++ b/docs/docs-ref-autogen/office/office/office.requirementsetsupport.yml
@@ -3,7 +3,7 @@ name: Office.RequirementSetSupport
 uid: office!Office.RequirementSetSupport:interface
 package: office!
 fullName: Office.RequirementSetSupport
-summary: 提供有关当前环境中支持的要求集的信息。
+summary: 提供有关当前环境中支持哪些要求集的信息。
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -21,10 +21,10 @@ methods:
     content: 'isSetSupported(name: string, minVersion?: string): boolean;'
     parameters:
     - id: name
-      description: 要求集名称 (例如，"ExcelApi" ) 。
+      description: 要求集名称 (例如"ExcelApi") 。
       type: string
     - id: minVersion
-      description: 必需的最低版本 (例如，"1.4" ) 。
+      description: 所需的最低版本 (例如"1.4") 。
       type: string
     return:
       type: boolean
@@ -33,7 +33,11 @@ methods:
   uid: office!Office.RequirementSetSupport#isSetSupported:member(2)
   package: office!
   fullName: isSetSupported(name, minVersionNumber)
-  summary: 检查主机 Office 应用程序是否支持指定的要求集。
+  summary: >-
+    检查主机 Office 应用程序是否支持指定的要求集。
+
+
+    **警告**：此 `isSetSupported` `minVersionNumber` (，其中一个数字) 已弃用。 请改为使用字符串 `isSetSupported` 重载。
   remarks: ''
   isPreview: false
   isDeprecated: true
@@ -42,18 +46,18 @@ methods:
     content: 'isSetSupported(name: string, minVersionNumber?: number): boolean;'
     parameters:
     - id: name
-      description: 要求集名称 (例如，"ExcelApi" ) 。
+      description: 要求集名称 (例如"ExcelApi") 。
       type: string
     - id: minVersionNumber
-      description: 必需的最低版本 (例如，1.4) 。 **警告**： (的此重载， `isSetSupported` 其中 `minVersionNumber` 是已弃用的数字) 。 改用的字符串重载 `isSetSupported` 。
+      description: 所需的最低版本 (例如 1.4) 。
       type: number
     return:
       type: boolean
       description: ''
 metadata:
-  ms.openlocfilehash: 0afeef68e4d4dffec513afc2e3d7e30bbd6d2782
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 074758f1349534105b1178a7b9d9b732ef98e8e0
+  ms.sourcegitcommit: 94ed3108858c111541f7430d7482ea329ad21dbd
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49183305"
+  ms.lasthandoff: 02/03/2021
+  ms.locfileid: "50092044"
