--- a/docs/docs-ref-autogen/word_1_2/word/word.underlinetype.yml
+++ b/docs/docs-ref-autogen/word_1_2/word/word.underlinetype.yml
@@ -4,10 +4,10 @@ uid: word!Word.UnderlineType:enum
 package: word!
 fullName: Word.UnderlineType
 summary: >-
-  支持的下划线格式的样式。
+  支持下划线格式的样式。
 
 
-  \[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  \[[API 集：WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -15,7 +15,7 @@ fields:
 - name: dashLine
   uid: word!Word.UnderlineType.dashLine:member
   package: word!
-  summary: 单短线下划线。
+  summary: 单划线下划线。
   value: "\"DashLine\""
 - name: dashLineHeavy
   uid: word!Word.UnderlineType.dashLineHeavy:member
@@ -35,7 +35,7 @@ fields:
 - name: dotDashLine
   uid: word!Word.UnderlineType.dotDashLine:member
   package: word!
-  summary: 点-短线下划线。
+  summary: 点划线下划线交替显示。
   value: "\"DotDashLine\""
 - name: dotDashLineHeavy
   uid: word!Word.UnderlineType.dotDashLineHeavy:member
@@ -45,12 +45,12 @@ fields:
 - name: dotLine
   uid: word!Word.UnderlineType.dotLine:member
   package: word!
-  summary: ''
+  summary: '**警告** `dotLine` ：已弃用。'
   value: "\"DotLine\""
 - name: dotted
   uid: word!Word.UnderlineType.dotted:member
   package: word!
-  summary: 点式下划线。
+  summary: 虚线下划线。
   value: "\"Dotted\""
 - name: dottedHeavy
   uid: word!Word.UnderlineType.dottedHeavy:member
@@ -65,7 +65,7 @@ fields:
 - name: hidden
   uid: word!Word.UnderlineType.hidden:member
   package: word!
-  summary: ''
+  summary: '**警告** `hidden` ：已弃用。'
   value: "\"Hidden\""
 - name: mixed
   uid: word!Word.UnderlineType.mixed:member
@@ -90,7 +90,7 @@ fields:
 - name: twoDotDashLine
   uid: word!Word.UnderlineType.twoDotDashLine:member
   package: word!
-  summary: 点-点-短线下划线。
+  summary: 点-点-短划线交替下划线。
   value: "\"TwoDotDashLine\""
 - name: twoDotDashLineHeavy
   uid: word!Word.UnderlineType.twoDotDashLineHeavy:member
@@ -115,12 +115,12 @@ fields:
 - name: word
   uid: word!Word.UnderlineType.word:member
   package: word!
-  summary: 仅为单个单词加下划线。
+  summary: 仅为单个单词添加下划线。
   value: "\"Word\""
 metadata:
-  ms.openlocfilehash: e207e70c6deb0ac12d3b1ae68508ae8e52d53e17
-  ms.sourcegitcommit: a6ecbc9abca2ab5c82af4c869e3e2d72c999a4c1
+  ms.openlocfilehash: c567e4ba4e13ee856e1d1ae7b4ec72ce8b02f529
+  ms.sourcegitcommit: 94ed3108858c111541f7430d7482ea329ad21dbd
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "49550412"
+  ms.lasthandoff: 02/03/2021
+  ms.locfileid: "50092023"
