--- a/docs/docs-ref-autogen/word_1_3/word/word.breaktype.yml
+++ b/docs/docs-ref-autogen/word_1_3/word/word.breaktype.yml
@@ -7,7 +7,7 @@ summary: >-
   指定分页符的窗体。
 
 
-  \[[API 集： WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
+  \[[API 集：WordApi](/office/dev/add-ins/reference/requirement-sets/word-api-requirement-sets)\]
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -20,7 +20,7 @@ fields:
 - name: next
   uid: word!Word.BreakType.next:member
   package: word!
-  summary: ''
+  summary: '**警告** `next` ：已弃用。 请 `sectionNext` 改为使用。'
   value: "\"Next\""
 - name: page
   uid: word!Word.BreakType.page:member
@@ -48,9 +48,9 @@ fields:
   summary: 使下一节从下一奇数页开始的分节符。如果分节符落入奇数页，则 Word 将下一偶数页留为空白。
   value: "\"SectionOdd\""
 metadata:
-  ms.openlocfilehash: d85e7d2660ec49ffdf5fc324f7e10b499b97dd74
-  ms.sourcegitcommit: a6ecbc9abca2ab5c82af4c869e3e2d72c999a4c1
+  ms.openlocfilehash: 7bc579212123efd9cf287cad640ed65250a104d5
+  ms.sourcegitcommit: 94ed3108858c111541f7430d7482ea329ad21dbd
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 12/02/2020
-  ms.locfileid: "49537285"
+  ms.lasthandoff: 02/03/2021
+  ms.locfileid: "50091918"
