commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.settingcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.settingcollection.yml
@@ -122,7 +122,7 @@ methods:
   package: excel!
   fullName: getItemOrNullObject(key)
   summary: >-
-    按键获取 Setting 项。 如果没有 Setting 项，将返回 NULL 对象。
+    按键获取 Setting 项。 如果 Setting 不存在，则此函数将返回其属性设置为 `isNullObject``true`<!-- -->. 有关详细信息，请参阅 [*OrNullObject 方法和属性](https://docs.microsoft.com/office/dev/add-ins/develop/application-specific-api-model#ornullobject-methods-and-properties)<!-- -->.
 
 
     \[[API 集：ExcelApi 1.4](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
@@ -204,9 +204,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 95cfa6b78c16b94f31ea4f0072b4af89ca98d827
-  ms.sourcegitcommit: d14ccd5d21286fdad1d3451f3ac745c603d9400d
+  ms.openlocfilehash: f08410e4f7c2a2b71bdb0c230a28b92c67af4bac
+  ms.sourcegitcommit: abafd55d959d3f9a6a2bd96e774c704fd3dcd961
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/13/2021
-  ms.locfileid: "49852626"
+  ms.lasthandoff: 02/05/2021
+  ms.locfileid: "50115068"
