--- a/docs/docs-ref-autogen/excel/excel/excel.taskcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.taskcollection.yml
@@ -7,7 +7,7 @@ summary: >-
   表示任务的集合。
 
 
-  \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+  \[[API 集：ExcelApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
 remarks: ''
 isPreview: true
 isDeprecated: false
@@ -17,7 +17,7 @@ properties:
   uid: excel!Excel.TaskCollection#context:member
   package: excel!
   fullName: context
-  summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
+  summary: 与对象关联的请求上下文。 这会将外接程序的进程连接到 Office 主机应用程序的进程。
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -46,7 +46,7 @@ methods:
     获取集合中的任务数。
 
 
-    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -60,10 +60,10 @@ methods:
   package: excel!
   fullName: getItem(key)
   summary: >-
-    使用其 id 获取任务。
+    使用其 ID 获取任务。
 
 
-    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -71,20 +71,20 @@ methods:
     content: 'getItem(key: string): Excel.Task;'
     parameters:
     - id: key
-      description: 任务的 id。
+      description: 任务的 ID。
       type: string
     return:
       type: <xref uid="excel!Excel.Task:class" />
-      description: 具有给定 id 的任务。如果没有具有给定 id 的任务，则会引发错误。
+      description: 具有给定 ID 的任务。如果没有具有给定 ID 的任务，则会引发错误。
 - name: getItemAt(index)
   uid: excel!Excel.TaskCollection#getItemAt:member(1)
   package: excel!
   fullName: getItemAt(index)
   summary: >-
-    按其在集合中的索引获取任务。
+    按任务在集合中的索引获取任务。
 
 
-    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -102,10 +102,10 @@ methods:
   package: excel!
   fullName: getItemOrNullObject(key)
   summary: >-
-    使用其 id 获取任务。
+    使用其 ID 获取任务。
 
 
-    \[[API 集： EXCELAPI BETA (仅预览) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
+    \[[API 集：ExcelApi BETA (预览版) ](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -113,11 +113,11 @@ methods:
     content: 'getItemOrNullObject(key: string): Excel.Task;'
     parameters:
     - id: key
-      description: 任务的 id。
+      description: 任务的 ID。
       type: string
     return:
       type: <xref uid="excel!Excel.Task:class" />
-      description: 具有给定 id 的任务。如果没有具有给定 id 的任务，则将其 `isNullObject` 属性设置为的对象 `true`<!-- -->. 有关详细信息，请参阅[ \* OrNullObject 方法和属性](https://docs.microsoft.com/office/dev/add-ins/develop/application-specific-api-model#ornullobject-methods-and-properties)<!-- -->.
+      description: 具有给定 ID 的任务。如果没有具有给定 ID 的任务，则此函数将返回其属性设置为 `isNullObject``true`<!-- -->. 有关详细信息，请参阅[ \* OrNullObject 方法和属性](https://docs.microsoft.com/office/dev/add-ins/develop/application-specific-api-model#ornullobject-methods-and-properties)<!-- -->.
 - name: load(options)
   uid: excel!Excel.TaskCollection#load:member(1)
   package: excel!
@@ -147,7 +147,7 @@ methods:
     content: 'load(propertyNames?: string | string[]): Excel.TaskCollection;'
     parameters:
     - id: propertyNames
-      description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
+      description: 用逗号分隔的字符串或字符串数组，用于指定要加载的属性。
       type: string | string[]
     return:
       type: <xref uid="excel!Excel.TaskCollection:class" />
@@ -164,7 +164,7 @@ methods:
     content: 'load(propertyNamesAndPaths?: OfficeExtension.LoadOption): Excel.TaskCollection;'
     parameters:
     - id: propertyNamesAndPaths
-      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，并且 `propertyNamesAndPaths.expand` 是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
+      description: '`propertyNamesAndPaths.select` 是一个以逗号分隔的字符串，用于指定要加载的属性，它是一个以逗号分隔的字符串，用于指定要加载的 `propertyNamesAndPaths.expand` 导航属性。'
       type: <xref uid="office!OfficeExtension.LoadOption:interface" />
     return:
       type: <xref uid="excel!Excel.TaskCollection:class" />
@@ -173,7 +173,7 @@ methods:
   uid: excel!Excel.TaskCollection#toJSON:member(1)
   package: excel!
   fullName: toJSON()
-  summary: 重写 JavaScript `toJSON()` 方法，以便在将 API 对象传递到时提供更有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，调用 `toJSON` 传递给它的对象的方法。 ) 而原始 `Excel.TaskCollection` 对象是 API 对象，则该 `toJSON` 方法返回一个纯 JavaScript 对象 (类型为 `Excel.Interfaces.TaskCollectionData`<!-- -->包含集合项中任何已加载属性的浅表的 "items" 数组 ) 。
+  summary: 重写 JavaScript 方法，以便向 API 对象传递 `toJSON()` 时提供更多有用的输出 `JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->，反过来，调用传递给它的对象的方法。) 而原始对象是一个 API 对象，该方法返回一个类型为 (`toJSON` `Excel.TaskCollection` `toJSON` JavaScript 对象 `Excel.Interfaces.TaskCollectionData`<!-- -->) 包含"items"数组，其中包含集合项中任何已加载属性的浅表副本。
   remarks: ''
   isPreview: true
   isDeprecated: false
@@ -184,9 +184,9 @@ methods:
       description: ''
 extends: <xref uid="office!OfficeExtension.ClientObject:class" />
 metadata:
-  ms.openlocfilehash: 685f178eb0475f9b7f35f9a0c68406127e20148b
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 95b56f27629c1a2af842a9f812fc6bc60eac031a
+  ms.sourcegitcommit: abafd55d959d3f9a6a2bd96e774c704fd3dcd961
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49327472"
+  ms.lasthandoff: 02/05/2021
+  ms.locfileid: "50115075"
