commit translated contents

--- a/docs/docs-ref-autogen/outlook_1_4/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/outlook/office.appointmentcompose.yml
@@ -990,7 +990,7 @@ methods:
     content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     parameters:
     - id: attachmentId
-      description: 要删除的附件的标识符。 The maximum string length of the `attachmentId` is 200 characters in Outlook on the web, and 100 characters in Outlook on Windows.
+      description: 要删除的附件的标识符。 Outlook 网页和 Windows 中的最大字符串长度为 `attachmentId` 200 个字符。
       type: string
     - id: options
       description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
@@ -1209,9 +1209,9 @@ methods:
       description: ''
 extends: <xref uid="outlook!Office.Appointment:interface" />
 metadata:
-  ms.openlocfilehash: 812c6d4fc359fe82c338cee1593130bd1c83d34b
-  ms.sourcegitcommit: d14ccd5d21286fdad1d3451f3ac745c603d9400d
+  ms.openlocfilehash: c3756578caa7f5c91477688fabaabc74daa0774f
+  ms.sourcegitcommit: 9dba9247601805ad821e7a7260ac418e566786b7
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/13/2021
-  ms.locfileid: "49861383"
+  ms.lasthandoff: 02/10/2021
+  ms.locfileid: "50173221"
