--- a/docs/docs-ref-autogen/outlook_1_6/outlook/office.appointmentcompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_6/outlook/office.appointmentcompose.yml
@@ -895,7 +895,7 @@ methods:
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;string&gt;) =&gt; void'
     return:
       type: void
-      description: 所选数据作为字符串，格式由 `coercionType`<!-- -->.
+      description: 作为字符串的选定数据，格式由 `coercionType`<!-- -->.
 - name: loadCustomPropertiesAsync(callback, userContext)
   uid: outlook!Office.AppointmentCompose#loadCustomPropertiesAsync:member(1)
   package: outlook!
@@ -990,7 +990,7 @@ methods:
     content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     parameters:
     - id: attachmentId
-      description: 要删除的附件的标识符。 The maximum string length of the `attachmentId` is 200 characters in Outlook on the web, and 100 characters in Outlook on Windows.
+      description: 要删除的附件的标识符。 Outlook 网页和 Windows 中的最大字符串长度为 `attachmentId` 200 个字符。
       type: string
     - id: options
       description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
@@ -1209,9 +1209,9 @@ methods:
       description: ''
 extends: <xref uid="outlook!Office.Appointment:interface" />
 metadata:
-  ms.openlocfilehash: 16533036abdfa70a89d3d248810d9c2617b50ecc
-  ms.sourcegitcommit: d14ccd5d21286fdad1d3451f3ac745c603d9400d
+  ms.openlocfilehash: 86991a2763aa8e83ae8a56482159f611d6560730
+  ms.sourcegitcommit: 9dba9247601805ad821e7a7260ac418e566786b7
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/13/2021
-  ms.locfileid: "49849700"
+  ms.lasthandoff: 02/10/2021
+  ms.locfileid: "50173368"
