--- a/docs/docs-ref-autogen/outlook_1_7/outlook/office.messagecompose.yml
+++ b/docs/docs-ref-autogen/outlook_1_7/outlook/office.messagecompose.yml
@@ -16,7 +16,7 @@ summary: >-
   - [ItemCompose](xref:outlook!Office.ItemCompose:interface)
 
 
-  - [消息](xref:outlook!Office.Message:interface)
+  - [邮件](xref:outlook!Office.Message:interface)
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -1046,7 +1046,7 @@ methods:
     content: 'removeAttachmentAsync(attachmentId: string, options?: Office.AsyncContextOptions, callback?: (asyncResult: Office.AsyncResult<void>) => void): void;'
     parameters:
     - id: attachmentId
-      description: 要删除的附件的标识符。 The maximum string length of the `attachmentId` is 200 characters in Outlook on the web, and 100 characters in Outlook on Windows.
+      description: 要删除的附件的标识符。 Outlook 网页和 Windows 中的最大字符串长度为 `attachmentId` 200 个字符。
       type: string
     - id: options
       description: 可选。 包含一个或多个以下属性的对象文本。 `asyncContext`<!-- -->：开发人员可以在回调方法中提供他们希望访问的任何对象。
@@ -1274,9 +1274,9 @@ methods:
       description: ''
 extends: <xref uid="outlook!Office.Message:interface" />
 metadata:
-  ms.openlocfilehash: ed07f41679353a4b9460cf473038dbea7880be1d
-  ms.sourcegitcommit: d14ccd5d21286fdad1d3451f3ac745c603d9400d
+  ms.openlocfilehash: 994ee239f851ded3ad67558dd05acc49507aaac1
+  ms.sourcegitcommit: 9dba9247601805ad821e7a7260ac418e566786b7
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/13/2021
-  ms.locfileid: "49859059"
+  ms.lasthandoff: 02/10/2021
+  ms.locfileid: "50173263"
