commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.dialogoptions.yml
+++ b/docs/docs-ref-autogen/office/office/office.dialogoptions.yml
@@ -3,7 +3,7 @@ name: Office.DialogOptions
 uid: office!Office.DialogOptions:interface
 package: office!
 fullName: Office.DialogOptions
-summary: 提供有关如何显示对话框的选项。
+summary: 提供对话框的显示方式的选项。
 remarks: ''
 isPreview: false
 isDeprecated: false
@@ -13,7 +13,7 @@ properties:
   uid: office!Office.DialogOptions#asyncContext:member
   package: office!
   fullName: asyncContext
-  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的、任何类型的用户定义的项目未更改。
+  summary: 在传递给回调的 AsyncResult 对象的 asyncContext 属性中返回的任何类型的用户定义项，保持不变。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -25,7 +25,7 @@ properties:
   uid: office!Office.DialogOptions#displayInIframe:member
   package: office!
   fullName: displayInIframe
-  summary: 确定是否应在 IFrame 中显示对话框。 此设置仅适用于 web 上的 Office，并被其他平台忽略。 如果为 false (默认) ，该对话框将显示为新的浏览器窗口 (弹出) 。 对于无法在 IFrame 中显示的身份验证页建议使用此值。 如果为 true，则对话框将显示为带有 IFrame 的浮动覆盖。 对于用户体验和性能而言，这是最佳选择。
+  summary: 确定是否应在 IFrame 中显示对话框。 此设置仅适用于 Office 网页应用，其他平台将忽略此设置。 如果 (为 false，) 对话框将显示为新的浏览器窗口 (弹出窗口) 。 对于无法在 IFrame 中显示的身份验证页建议使用此值。 如果为 true，则对话框将显示为具有 IFrame 的浮动覆盖层。 对于用户体验和性能而言，这是最佳选择。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -37,7 +37,7 @@ properties:
   uid: office!Office.DialogOptions#height:member
   package: office!
   fullName: height
-  summary: 以占当前显示器的百分比的形式，定义对话框的宽度。 默认值为 80%。 下限为 250px。
+  summary: 以占当前显示器的百分比的形式，定义对话框的高度。 默认值为 80%。 下限为 250px。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -50,7 +50,7 @@ properties:
   package: office!
   fullName: promptBeforeOpen
   summary: >-
-    确定是否将向用户显示弹出窗口阻止对话框。 默认值为 true。
+    确定是否向用户显示弹出窗口阻止程序对话框。 默认值为 true。
 
 
     `true` - 框架显示用于触发导航的弹出窗口，并避开浏览器的弹出窗口阻止程序。 `false` - 对话框不会显示，开发人员必须处理弹出窗口（通过提供用户界面项目来触发导航）。
@@ -65,7 +65,7 @@ properties:
   uid: office!Office.DialogOptions#width:member
   package: office!
   fullName: width
-  summary: 以占当前显示器的百分比的形式，定义对话框的高度。 默认值为 80%。 下限为 150px。
+  summary: 以占当前显示器的百分比的形式，定义对话框的宽度。 默认值为 80%。 下限为 150px。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -74,9 +74,9 @@ properties:
     return:
       type: number
 metadata:
-  ms.openlocfilehash: 609548d8e7ae3790b064a32afa3f9880760fccc0
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 867cd39bf951a1406c2bee1357729ae150c38056
+  ms.sourcegitcommit: dc544b9134b297c2057176e3afce1bd6828f091c
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49329563"
+  ms.lasthandoff: 02/17/2021
+  ms.locfileid: "50270810"
