commit translated contents

--- a/docs/docs-ref-autogen/office/office/office.coerciontype.yml
+++ b/docs/docs-ref-autogen/office/office/office.coerciontype.yml
@@ -5,10 +5,31 @@ package: office!
 fullName: Office.CoercionType
 summary: 指定如何强制由调用方法返回或设置的数据。
 remarks: >-
-  PowerPoint 仅支持 `Office.CoercionType.Text`<!-- -->, `Office.CoercionType.Image`<!-- -->, `Office.CoercionType.SlideRange`<!-- -->，并 `Office.CoercionType.XmlSvg`<!-- -->.
+  以下要求集说明中指定了每个应用程序和 `CoercionType` 平台支持。
 
 
-  项目仅支持 `Office.CoercionType.Text`<!-- -->.
+  - [HtmlCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#htmlcoercion)<!-- -->， (`Office.CoercionType.Html`<!-- -->)
+
+
+  - [使用时，ImageCoercion 1.1 (1.1](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/image-coercion-requirement-sets)`Office.CoercionType.Image`<!-- -->)
+
+
+  - [使用时 (MatrixCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#matrixcoercion)`Office.CoercionType.Matrix`<!-- -->)
+
+
+  - [使用 OoxmlCoercion (OoxmlCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#ooxmlcoercion)`Office.CoercionType.Ooxml`<!-- -->)
+
+
+  - [Selection](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#selection)
+
+
+  - [使用时 (TableCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#tablecoercion)`Office.CoercionType.Table`<!-- -->)
+
+
+  - [使用时 (TextCoercion](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/office-add-in-requirement-sets#textcoercion)`Office.CoercionType.Text`<!-- -->)
+
+
+  - [使用时，ImageCoercion 1.2 (1.2](https://docs.microsoft.com/office/dev/add-ins/reference/requirement-sets/image-coercion-requirement-sets#imagecoercion-12)`Office.CoercionType.XmlSvg`<!-- -->)
 isPreview: false
 isDeprecated: false
 fields:
@@ -19,7 +40,7 @@ fields:
     作为 HTML 返回或设置数据。
 
 
-    **注意**：仅适用于 outlook 外接程序中的 Word 和 outlook 外接程序 (撰写模式) 的数据。
+    **注意**：仅适用于 Word 外接程序和 Outlook 外接程序（适用于 Outlook (撰写模式）) 。
 - name: Image
   uid: office!Office.CoercionType.Image:member
   package: office!
@@ -28,7 +49,7 @@ fields:
   uid: office!Office.CoercionType.Matrix:member
   package: office!
   summary: >-
-    以不带标题的表格数据形式返回或设置数据。 以包含一维连续文本的字符的数组的数组形式返回或设置数据。 例如，两列的字符串值的三行为： \[ \[ "R1C1"、"R1C2" \] 、 \[ "R2C1"、"R2C2" \] 、 \[ "R3C1"、"R3C2" \] \] 。
+    以不带标题的表格数据形式返回或设置数据。 以包含一维连续文本的字符的数组的数组形式返回或设置数据。 例如，两列中的三行字符串值是 \[ \[ ："R1C1"、"R1C2"、"R2C1"、"R2C2"、"R3C1"、"R3C2"。 \] \[ \] \[ \] \]
 
 
     **注意**：仅适用于 Excel 和 Word 中的数据。
@@ -44,10 +65,10 @@ fields:
   uid: office!Office.CoercionType.SlideRange:member
   package: office!
   summary: >-
-    返回一个 JSON 对象，其中包含所选幻灯片的 ID、标题和索引的数组。 例如， `{"slides":[{"id":257,"title":"Slide 2","index":2},{"id":256,"title":"Slide 1","index":1}]}` 选择两张幻灯片。
+    返回一个 JSON 对象，其中包含所选幻灯片的 ID、标题和索引的数组。 例如， `{"slides":[{"id":257,"title":"Slide 2","index":2},{"id":256,"title":"Slide 1","index":1}]}` 对于两张幻灯片的选定内容。
 
 
-    **注意**：在调用 [文档](xref:office!Office.Document:interface)时，仅适用于 PowerPoint 中的数据<!-- -->调用 document.getselecteddata 方法，用于获取当前幻灯片或选定的幻灯片范围。
+    **注意**：仅适用于调用文档时 PowerPoint [中的数据](xref:office!Office.Document:interface)<!-- -->.getSelectedData 方法，用于获取当前幻灯片或所选幻灯片范围。
 - name: Table
   uid: office!Office.CoercionType.Table:member
   package: office!
@@ -59,15 +80,15 @@ fields:
 - name: Text
   uid: office!Office.CoercionType.Text:member
   package: office!
-  summary: 以文本 (字符串) 的形式返回或设置数据。 以一维连续文本的字符形式返回或设置的数据。
+  summary: 返回或设置数据作为文本 (字符串) 。 以一维连续文本的字符形式返回或设置的数据。
 - name: XmlSvg
   uid: office!Office.CoercionType.XmlSvg:member
   package: office!
-  summary: 数据以 XML 数据的形式返回或设置，其中包含 SVG 图像。 **注意**：仅适用于 Excel、Word 和 PowerPoint 中的数据。
+  summary: 数据作为包含 SVG 图像的 XML 数据返回或设置。 **注意**：仅适用于 Excel、Word 和 PowerPoint 中的数据。
 metadata:
-  ms.openlocfilehash: 4cd58a95861eaf1364be2fc7278506f71840a2cd
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 6d7bafcec2c13cf0641ae0548d6fd497c1b2a0e5
+  ms.sourcegitcommit: f55d2bbeba2a20abb522cbf742e727b82bcf73ee
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49251624"
+  ms.lasthandoff: 03/05/2021
+  ms.locfileid: "50462915"
