--- a/docs/docs-ref-autogen/outlook_1_9/outlook/office.sharedproperties.yml
+++ b/docs/docs-ref-autogen/outlook_1_9/outlook/office.sharedproperties.yml
@@ -4,13 +4,13 @@ uid: outlook!Office.SharedProperties:interface
 package: outlook!
 fullName: Office.SharedProperties
 summary: >-
-  表示共享文件夹、邮箱或日历中的约会或邮件的属性。
+  表示共享文件夹中约会或邮件的属性。
 
 
-  有关如何使用此对象的详细信息，请参阅 [代理访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access) 文章。
+  有关如何使用此对象的信息，请参阅委托 [访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access) 文章。
 
 
-  \[[API 集：邮箱 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+  \[[API 集：Mailbox 1.8](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
 remarks: >-
   **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -24,7 +24,7 @@ properties:
   uid: outlook!Office.SharedProperties#delegatePermissions:member
   package: outlook!
   fullName: delegatePermissions
-  summary: 委派对共享文件夹的权限。
+  summary: 代理对共享文件夹拥有的权限。
   remarks: ''
   isPreview: false
   isDeprecated: false
@@ -49,10 +49,10 @@ properties:
   package: outlook!
   fullName: targetMailbox
   summary: >-
-    所有者的代理访问邮箱的位置。 根据 Outlook 客户端的不同，此位置可能有所不同。
+    委派访问的所有者邮箱的位置。 此位置可能因 Outlook 客户端不同而不同。
 
 
-    使用 with `targetRestUrl` 来构造 REST 操作的 URL。
+    用于 `targetRestUrl` 构造 REST 操作 URL。
 
 
     示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
@@ -71,7 +71,7 @@ properties:
     REST API 的基本 URL (当前 https://outlook.office.com/api) 。
 
 
-    使用 with `targetMailbox` 来构造 REST 操作的 URL。
+    用于 `targetMailbox` 构造 REST 操作 URL。
 
 
     示例用法： `targetRestUrl + "/{api_version}/users/" + targetMailbox + "/{REST_operation}"`
@@ -83,9 +83,9 @@ properties:
     return:
       type: string
 metadata:
-  ms.openlocfilehash: 9bc2a1a9314067703487f6aaa649fcfaefd274e0
-  ms.sourcegitcommit: 3bab97ab3b91da7cca497f6fc895408a76bd8b46
+  ms.openlocfilehash: 4750beb483e66df269fa51d24aeee8634b0d83d5
+  ms.sourcegitcommit: f55d2bbeba2a20abb522cbf742e727b82bcf73ee
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 11/18/2020
-  ms.locfileid: "49182185"
+  ms.lasthandoff: 03/05/2021
+  ms.locfileid: "50462789"
