--- a/docs/docs-ref-autogen/outlook_1_4/outlook/office.mailbox.yml
+++ b/docs/docs-ref-autogen/outlook_1_4/outlook/office.mailbox.yml
@@ -37,13 +37,13 @@ properties:
     包含以下成员：
 
 
-    - `hostName` (字符串) ：表示主机应用程序名称的字符串。 它应该是下列值之一： `Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或 `OutlookAndroid`<!-- -->. **注意**：为桌面客户端（例如 Windows 和 Mac (）上的 Outlook 返回"Outlook") 。
+    - `hostName` (字符串) ：表示主机应用程序名称的字符串。 它应该是下列值之一： `Outlook`<!-- -->, `OutlookWebApp`<!-- -->, `OutlookIOS`<!-- -->，或者 `OutlookAndroid`<!-- -->. **注意**：为桌面客户端（例如 Windows 和 Mac (）上的 Outlook 返回"Outlook") 。
 
 
-    - `hostVersion` (字符串) ：表示主机应用程序或 Exchange Server (版本（例如，"15.0.468.0") ）。 如果邮件外接程序在桌面版或移动客户端上的 Outlook 中运行，则该属性返回主机应用程序 `hostVersion` Outlook 的版本。 在 Outlook 网页版中，该属性返回 Exchange Server。
+    - `hostVersion` (字符串) ：一个代表主机应用程序或 Exchange Server (版本（例如，"15.0.468.0") ）的字符串。 如果邮件外接程序在 Outlook 桌面客户端或移动客户端中运行，则该属性返回主机应用程序 `hostVersion` Outlook 的版本。 在 Outlook 网页版中，该属性返回Exchange Server。
 
 
-    - `OWAView` (或字符串) ：一 (或字符串文本) 表示 `MailboxEnums.OWAView` Outlook 网页视图的枚举。 如果主机应用程序不是 Web 上的 Outlook，则访问此属性会导致未定义。 Web 上的 Outlook 有三个视图 (在屏幕较窄时显示，屏幕较宽时显示，而当屏幕宽时显示) 对应于屏幕和窗口的宽度以及可显示的列数。 `OneColumn` `TwoColumns` `ThreeColumns`
+    - `OWAView` (或字符串) ： (或字符串文本) 表示 Outlook 网页视图的 `MailboxEnums.OWAView` 枚举。 如果主机应用程序不是 Web 上的 Outlook，则访问此属性会导致未定义。 Web 上的 Outlook 有三个视图 (在屏幕较窄时显示，屏幕较宽时显示，当屏幕宽度为) 时显示，对应于屏幕和窗口的宽度以及可显示的列数。 `OneColumn` `TwoColumns` `ThreeColumns`
 
 
     详细信息位于 [Office.Diagnostics 下](xref:outlook!Office.Diagnostics:interface)<!-- -->.
@@ -66,13 +66,13 @@ properties:
     获取此电子邮件帐户的 Exchange Web Services (EWS) 终点的 URL。 仅限阅读模式。
 
 
-    你的应用必须具有在其清单 `ReadItem` 中指定的权限才能在阅读 `ewsUrl` 模式下调用成员。
+    你的应用必须具有在其清单 `ReadItem` 中指定的权限才能在读取 `ewsUrl` 模式下调用成员。
 
 
-    在撰写模式中，必须调用 `saveAsync` 方法，才能使用 `ewsUrl` 成员。 应用必须具有 `ReadWriteItem` 调用方法 `saveAsync` 的权限。
+    在撰写模式中，必须调用 `saveAsync` 方法，才能使用 `ewsUrl` 成员。 你的应用必须具有 `ReadWriteItem` 调用方法 `saveAsync` 的权限。
 
 
-    **注意**：iOS 版或 Android 版 Outlook 不支持此成员。
+    **注意**：此成员在 iOS 或 Android 版 Outlook 中不受支持。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -80,7 +80,7 @@ properties:
     **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
 
 
-    远程服务可使用 `ewsUrl` 值对用户邮箱进行 EWS 调用。 例如，可以创建远程服务以 [从所选项目获取附件](https://docs.microsoft.com/office/dev/add-ins/outlook/get-attachments-of-an-outlook-item)<!-- -->.
+    远程服务可使用 `ewsUrl` 值对用户邮箱进行 EWS 调用。 例如，可以创建远程服务从 [所选项目获取附件](https://docs.microsoft.com/office/dev/add-ins/outlook/get-attachments-of-an-outlook-item)<!-- -->.
 
 
     #### <a name="examples"></a>示例
@@ -120,15 +120,18 @@ properties:
   package: outlook!
   fullName: item
   summary: >-
-    邮箱项目。 根据加载项打开的上下文，项目类型可能会有所不同。 如果只想查看IntelliSense或模式，请强制将此项强制转换到以下项之一：
+    邮箱项目。 根据加载项打开的上下文，项目类型可能会有所不同。 如果只想查看IntelliSense或模式的详细信息，请将此项强制转换到以下项之一：
 
 
-    [MessageCompose](xref:outlook!Office.MessageCompose:interface)<!-- -->[，MessageRead](xref:outlook!Office.MessageRead:interface)<!-- -->[，AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)<!-- -->[、AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
+    [MessageCompose](xref:outlook!Office.MessageCompose:interface)<!-- -->[，MessageRead](xref:outlook!Office.MessageRead:interface)<!-- -->[，AppointmentCompose](xref:outlook!Office.AppointmentCompose:interface)<!-- -->[，AppointmentRead](xref:outlook!Office.AppointmentRead:interface)
+
+
+    **重要** `item` 提示：如果加载项支持固定任务窗格，则它可以为 null。 有关如何处理的详细信息，请参阅在 Outlook 中实现 [可固定的任务窗格](https://docs.microsoft.com/office/dev/add-ins/outlook/pinnable-taskpane#implement-the-event-handler)<!-- -->.
   remarks: ''
   isPreview: false
   isDeprecated: false
   syntax:
-    content: 'item: Item & ItemCompose & ItemRead & Message & MessageCompose & MessageRead & Appointment & AppointmentCompose & AppointmentRead;'
+    content: 'item?: Item & ItemCompose & ItemRead & Message & MessageCompose & MessageRead & Appointment & AppointmentCompose & AppointmentRead;'
     return:
       type: <xref uid="outlook!Office.Item:interface" /> & <xref uid="outlook!Office.ItemCompose:interface" /> & <xref uid="outlook!Office.ItemRead:interface" /> & <xref uid="outlook!Office.Message:interface" /> & <xref uid="outlook!Office.MessageCompose:interface" /> & <xref uid="outlook!Office.MessageRead:interface" /> & <xref uid="outlook!Office.Appointment:interface" /> & <xref uid="outlook!Office.AppointmentCompose:interface" /> & <xref uid="outlook!Office.AppointmentRead:interface" />
 - name: userProfile
@@ -159,10 +162,10 @@ methods:
     通过 REST API 检索的项 Id（如 Outlook 邮件 API 或 Microsoft Graph）使用与 Exchange Web 服务 (EWS) 所使用格式不同的格式。 方法将 REST 格式化的 ID 转换为正确的 EWS 格式。
 
 
-    **注意**：iOS 版或 Android 版 Outlook 不支持此方法。
+    **注意**：此方法在 iOS 或 Android 版 Outlook 中不受支持。
 
 
-    \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`Restricted`
 
@@ -218,7 +221,7 @@ methods:
     获取包含以本地客户端时间表示的时间信息的字典。
 
 
-    Outlook 网页版或桌面客户端的邮件应用程序使用的日期和时间可以使用不同的时区。 Outlook 使用客户端计算机时区;Web 上的 Outlook 使用在 Exchange 管理中心和 EAC (设置的) 。 应对日期和时间值进行处理，以便用户界面上显示的值始终与用户预期的时区一致。
+    Outlook 网页版或桌面客户端的邮件应用程序使用的日期和时间可以使用不同的时区。 Outlook 使用客户端计算机时区;Web 上的 Outlook 使用 Exchange 管理中心上设置的时区 (EAC) 。 应对日期和时间值进行处理，以便用户界面上显示的值始终与用户预期的时区一致。
 
 
     如果邮件应用程序在桌面客户端上的 Outlook 中运行，该方法将返回值设置为客户端计算机时区的 `convertToLocalClientTime` 字典对象。 如果邮件应用程序在 Outlook 网页版中运行，该方法将返回值设置为 EAC 中指定的时区的 `convertToLocalClientTime` 字典对象。
@@ -246,10 +249,10 @@ methods:
     将项目 ID 格式化（从 EWS 转换为 REST 格式）。
 
 
-    **注意**：iOS 版或 Android 版 Outlook 不支持此方法。
+    **注意**：此方法在 iOS 或 Android 版 Outlook 中不受支持。
 
 
-    \[[API 集：Mailbox 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
+    \[[API 集：邮箱 1.3](/office/dev/add-ins/reference/requirement-sets/outlook-api-requirement-sets)\]
   remarks: "**[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`Restricted`\n\n**[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读\n\n通过 EWS 或通过属性检索的项目 ID 使用的格式与 REST API `itemId` [ (（](https://docs.microsoft.com/previous-versions/office/office-365-api/api/version-2.0/mail-rest-operations) 如 Outlook 邮件 API 或 Microsoft [Graph）使用的格式不同](https://graph.microsoft.io/)<!-- -->. 方法将 EWS 格式化的 ID 转换为正确的 REST 格式。\n\n#### <a name=\"examples\"></a>示例\n\n```javascript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/prod/samples/outlook/85-tokens-and-service-calls/basic-rest-cors.yaml\nOffice.context.mailbox.getCallbackTokenAsync({ isRest: true }, function (result) {\n    var ewsId = Office.context.mailbox.item.itemId;\n    var token = result.value;\n    var restId = Office.context.mailbox.convertToRestId(ewsId, Office.MailboxEnums.RestVersion.v2_0);\n    var getMessageUrl = Office.context.mailbox.restUrl + '/v2.0/me/messages/' + restId;\n            \n    var xhr = new XMLHttpRequest();\n    xhr.open('GET', getMessageUrl);\n    xhr.setRequestHeader(\"Authorization\", \"Bearer \" + token);\n    xhr.onload = function (e) {\n        console.log(this.response);\n    }\n    xhr.send();\n});\n```\n```javascript\n// Link to full sample: https://raw.githubusercontent.com/OfficeDev/office-js-snippets/prod/samples/outlook/85-tokens-and-service-calls/ids-and-urls.yaml\nconsole.log(\"EWS URL: \" + Office.context.mailbox.ewsUrl);\nvar ewsId = Office.context.mailbox.item.itemId;\nconsole.log(\"EWS item ID: \" + Office.context.mailbox.item.itemId);\n\nconsole.log(\"REST URL: \" + Office.context.mailbox.restUrl);\nvar restId = Office.context.mailbox.convertToRestId(ewsId, Office.MailboxEnums.RestVersion.v2_0);\nconsole.log(\"REST item ID: \" + restId);\n\nvar ewsId2 = Office.context.mailbox.convertToEwsId(restId, Office.MailboxEnums.RestVersion.v2_0);\nconsole.log(\"EWS ID (from REST ID): \" + ewsId2);\n```"
   isPreview: false
   isDeprecated: false
@@ -273,7 +276,7 @@ methods:
     从 `Date` 包含时间信息的字典获取对象。
 
 
-    该方法将包含本地日期和时间的字典转换为具有本地日期和时间 `convertToUtcClientTime` `Date` 正确值的对象。
+    该方法将包含本地日期和时间的字典转换为具有本地日期和时间的正确 `convertToUtcClientTime` `Date` 值的对象。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -332,16 +335,16 @@ methods:
     `displayAppointmentForm` 方法将打开桌面新窗口中或移动设备对话框中的现有日历约会。
 
 
-    在 Mac 上的 Outlook 中，可以使用此方法显示属于定期系列的单个约会，或显示定期系列的主约会。 但是，无法显示系列实例，因为无法访问属性集 (包括定期系列实例) ID。
+    在 Mac 上的 Outlook 中，可以使用此方法显示不是定期系列的单个约会或定期系列的主约会。 但是，无法显示系列的实例，因为无法访问属性集 (包括定期系列实例) ID。
 
 
     在 Outlook 网页版中，此方法仅在窗体正文小于或等于 32K 字符时打开指定的窗体。
 
 
-    如果指定的项目标识符未标识现有约会，将在客户端计算机或设备上打开一个空白窗格，并且不会返回错误消息。
+    如果指定的项目标识符无法标识现有约会，将在客户端计算机或设备上打开一个空白窗格，并且不会返回错误消息。
 
 
-    **注意**：iOS 版或 Android 版 Outlook 不支持此方法。
+    **注意**：此方法在 iOS 或 Android 版 Outlook 中不受支持。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -386,13 +389,13 @@ methods:
     在 Outlook 网页版中，此方法仅在窗体正文小于或等于 32K 字符时打开指定的窗体。
 
 
-    如果指定的项目标识符未标识现有消息，客户端计算机上将不会显示任何消息，并且不会返回错误消息。
+    如果指定的项目标识符无法标识现有消息，则客户端计算机上不会显示任何消息，并且不会返回错误消息。
 
 
-    请勿将 . `displayMessageForm` 与表示约会的 itemId 一同使用。 使用 `displayAppointmentForm` 方法显示现有的约会，并使用 `displayNewAppointmentForm` 显示窗体以新建约会。
+    请勿将 `displayMessageForm` .与表示约会的 itemId 一同使用。 使用 `displayAppointmentForm` 方法显示现有的约会，并使用 `displayNewAppointmentForm` 显示窗体以新建约会。
 
 
-    **注意**：iOS 版或 Android 版 Outlook 不支持此方法。
+    **注意**：此方法在 iOS 或 Android 版 Outlook 中不受支持。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -443,7 +446,7 @@ methods:
     如果任何参数超过指定大小限制，或者指定了未知参数名称，则会引发异常。
 
 
-    **注意**：iOS 版或 Android 版 Outlook 不支持此方法。
+    **注意**：此方法在 iOS 或 Android 版 Outlook 中不受支持。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -483,7 +486,7 @@ methods:
     content: 'displayNewAppointmentForm(parameters: AppointmentForm): void;'
     parameters:
     - id: parameters
-      description: 描述 `AppointmentForm` 新约会的一个描述。 所有属性都是可选的。
+      description: 描述 `AppointmentForm` 新约会的一个。 所有属性都是可选的。
       type: <xref uid="outlook!Office.AppointmentForm:interface" />
     return:
       type: void
@@ -499,16 +502,16 @@ methods:
     `getCallbackTokenAsync` 方法进行异步调用，从托管用户邮箱的 Exchange Server 获取非跳转令牌。回调令牌的生存期为 5 分钟。
 
 
-    令牌作为字符串在属性中 `asyncResult.value` 返回。
+    令牌作为属性中的字符串 `asyncResult.value` 返回。
 
 
-    可以将令牌和附件标识符或项标识符传递到第三方系统。 第三方系统使用令牌作为持有者身份验证令牌调用 Exchange Web 服务 (EWS) [GetAttachment](https://docs.microsoft.com/exchange/client-developer/web-service-reference/getattachment-operation) 操作或 [GetItem](https://docs.microsoft.com/exchange/client-developer/web-service-reference/getitem-operation) 操作，以返回附件或项目。 例如，可以创建远程服务以 [从所选项目获取附件](https://docs.microsoft.com/office/dev/add-ins/outlook/get-attachments-of-an-outlook-item)<!-- -->.
+    可以将令牌和附件标识符或项标识符传递到第三方系统。 第三方系统使用令牌作为持有者身份验证令牌调用 Exchange Web 服务 (EWS) [GetAttachment](https://docs.microsoft.com/exchange/client-developer/web-service-reference/getattachment-operation) 操作或 [GetItem](https://docs.microsoft.com/exchange/client-developer/web-service-reference/getitem-operation) 操作，以返回附件或项目。 例如，可以创建远程服务从 [所选项目获取附件](https://docs.microsoft.com/office/dev/add-ins/outlook/get-attachments-of-an-outlook-item)<!-- -->.
 
 
     在 `getCallbackTokenAsync` 读取模式下调用该方法需要最低权限级别 `ReadItem`<!-- -->.
 
 
-    在 `getCallbackTokenAsync` 撰写模式下调用该方法需要你已保存项目。 `saveAsync`此方法要求最低权限级别为`ReadWriteItem`<!-- -->.
+    在 `getCallbackTokenAsync` 撰写模式下调用该方法需要你已保存项目。 `saveAsync`此方法需要最低权限级别`ReadWriteItem`<!-- -->.
 
 
     **重要** 说明：有关委派或共享方案的指南，请参阅 [委托访问](https://docs.microsoft.com/office/dev/add-ins/outlook/delegate-access) 文章。
@@ -522,7 +525,7 @@ methods:
     content: 'getCallbackTokenAsync(callback: (asyncResult: Office.AsyncResult<string>) => void, userContext?: any): void;'
     parameters:
     - id: callback
-      description: 方法完成后，用一个类型参数调用回调参数中传递的函数 `Office.AsyncResult`<!-- -->. 令牌作为字符串在属性中 `asyncResult.value` 返回。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
+      description: 方法完成后，使用单个类型参数调用在回调参数中传递的函数 `Office.AsyncResult`<!-- -->. 令牌作为属性中的字符串 `asyncResult.value` 返回。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;string&gt;) =&gt; void'
     - id: userContext
       description: 可选。 传递给异步方法的任何状态数据。
@@ -538,7 +541,7 @@ methods:
     获取用于标识用户和 Office 外接程序的令牌。
 
 
-    令牌作为字符串在属性中 `asyncResult.value` 返回。
+    令牌作为属性中的字符串 `asyncResult.value` 返回。
   remarks: >-
     **[最低权限级别](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions) <!-- -->**：`ReadItem`
 
@@ -546,7 +549,7 @@ methods:
     **[适用的 Outlook 模式](https://docs.microsoft.com/office/dev/add-ins/outlook/outlook-add-ins-overview#extension-points) <!-- -->**：撰写或阅读
 
 
-    此方法 `getUserIdentityTokenAsync` 返回一个令牌，可用于通过第三方系统[](https://docs.microsoft.com/office/dev/add-ins/outlook/authentication)标识外接程序和用户并进行身份验证<!-- -->.
+    此方法 `getUserIdentityTokenAsync` 返回一个令牌，可用于使用第三方系统[](https://docs.microsoft.com/office/dev/add-ins/outlook/authentication)标识外接程序和用户并进行身份验证<!-- -->.
 
 
     **错误**：
@@ -583,7 +586,7 @@ methods:
     content: 'getUserIdentityTokenAsync(callback: (asyncResult: Office.AsyncResult<string>) => void, userContext?: any): void;'
     parameters:
     - id: callback
-      description: 方法完成后，用一个类型参数调用回调参数中传递的函数 `Office.AsyncResult`<!-- -->. 令牌作为字符串在属性中 `asyncResult.value` 返回。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
+      description: 方法完成后，使用单个类型参数调用在回调参数中传递的函数 `Office.AsyncResult`<!-- -->. 令牌作为属性中的字符串 `asyncResult.value` 返回。 如果出现错误，则 `asyncResult.error` 和 `asyncResult.diagnostics` 属性可能会提供其他信息。
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;string&gt;) =&gt; void'
     - id: userContext
       description: 可选。 传递给异步方法的任何状态数据。
@@ -596,7 +599,7 @@ methods:
   package: outlook!
   fullName: makeEwsRequestAsync(data, callback, userContext)
   summary: >-
-    对承载用户邮箱的 Exchange (EWS) 服务执行异步请求。
+    在承载用户邮箱的 Exchange (EWS) 对 Exchange Web 服务进行异步请求。
 
 
     在这些情况下，加载项应该使用 REST API 来改为访问用户的邮箱。
@@ -611,7 +614,7 @@ methods:
     XML 请求必须指定 UTF-8 编码： `\<?xml version="1.0" encoding="utf-8"?\>`<!-- -->.
 
 
-    您的外接程序必须具有 `ReadWriteMailbox` 使用该方法 `makeEwsRequestAsync` 的权限。 有关使用权限以及可以使用该方法调用的 EWS 操作的信息，请参阅"指定邮件外接程序访问用户邮箱 `ReadWriteMailbox` `makeEwsRequestAsync` [的权限"](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)<!-- -->.
+    您的外接程序必须具有 `ReadWriteMailbox` 使用该方法 `makeEwsRequestAsync` 的权限。 有关使用可以使用该方法调用的权限和 EWS 操作的信息，请参阅"指定邮件外接程序访问用户邮箱 `ReadWriteMailbox` `makeEwsRequestAsync` [的权限](https://docs.microsoft.com/office/dev/add-ins/outlook/understanding-outlook-add-in-permissions)"<!-- -->.
 
 
     EWS 调用的 XML 结果作为 `asyncResult.value` 属性中的字符串提供。 如果结果大小超过 1 MB，则改为返回一条错误消息。
@@ -620,13 +623,13 @@ methods:
     **注意**：此方法在下列情况下不受支持：
 
 
-    - 在 iOS 版或 Android 版 Outlook 中。
+    - 在 iOS 或 Android 版 Outlook 中。
 
 
     - 在 Gmail 邮箱中加载加载项时。
 
 
-    **注意**：服务器管理员必须在客户端访问服务器 EWS 目录上设置为，才能启用该方法 `OAuthAuthentication` `true` `makeEwsRequestAsync` 以提出 EWS 请求。
+    **注意**：服务器管理员必须在客户端访问服务器 EWS 目录上设置为允许该方法 `OAuthAuthentication` `true` 提出 `makeEwsRequestAsync` EWS 请求。
 
 
     *版本差异*
@@ -757,7 +760,7 @@ methods:
       description: EWS 请求。
       type: any
     - id: callback
-      description: 方法完成后，用一个类型参数调用回调参数中传递的函数 `Office.AsyncResult`<!-- -->. `value`结果的属性是作为字符串提供的 EWS 请求的 XML。 如果结果大小超过 1 MB，则改为返回一条错误消息。
+      description: 方法完成后，使用单个类型参数调用在回调参数中传递的函数 `Office.AsyncResult`<!-- -->. `value`结果的属性是作为字符串提供的 EWS 请求的 XML。 如果结果大小超过 1 MB，则改为返回一条错误消息。
       type: '(asyncResult: <xref uid="office!Office.AsyncResult:interface" />&lt;string&gt;) =&gt; void'
     - id: userContext
       description: 可选。 传递给异步方法的任何状态数据。
@@ -766,9 +769,9 @@ methods:
       type: void
       description: ''
 metadata:
-  ms.openlocfilehash: 42ccab72b915dc208a80729311b64492967688a0
-  ms.sourcegitcommit: d14ccd5d21286fdad1d3451f3ac745c603d9400d
+  ms.openlocfilehash: 78181de4085a0b00d2619ac54bece9454938e942
+  ms.sourcegitcommit: f55d2bbeba2a20abb522cbf742e727b82bcf73ee
   ms.translationtype: MT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 01/13/2021
-  ms.locfileid: "49858121"
+  ms.lasthandoff: 03/05/2021
+  ms.locfileid: "50463341"
